Fixed that projects display on mobile? * Hmmm * Styling changes * Nav shadow * Intro btn gradient

--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -115,10 +115,10 @@ h2{
   position: relative;
   @include media('<phone'){
     text-align: center;
+    padding: 0 0 5px 0;
   }
   @include media('<340px'){
     font-size: 1.75em;
-    padding: 0 0 5px 10px;
     margin-bottom: 10px;
   }
 }
